package casinoCommonProto;

// ProtoHeader 需要在每个 Message 中作为第一个字段
message ProtoHeader {
    optional string version = 1; // 版本号
    optional uint32 userId = 2; // 用户 id
    optional int32 code = 3; // result code
    optional string error = 4; // result error description
}

//这里都是通用过的一些协议
message Heartbeat {
    optional ProtoHeader header = 1;
}

message User {
    optional string mid = 1; //mongdo Mid
    optional string pwd = 2; //最后一次签到的时间
    optional int64 coin = 3; //用户的金币
    optional uint32 id = 4;
    optional string nickName = 5; //用户的昵称
    optional bool loginTurntable = 6; //今日转盘奖励是否领取
    optional string loginTurntableTime = 7; //今日领取时间
    optional int32 scores = 8; //积分
    optional string lastSignTime = 9; //最后一次签到的时间
    optional int32 signCount = 10; //连续签到的次数
    optional int64 Diamond = 11; //通过钻石开房间
    optional string openId = 12; //微信openId
    optional string headUrl = 13; //头像
    optional string city = 14; //
    optional int32 sex = 15;
}

message TNotice {
    optional int32 id = 1; //公告的id
    optional int32 noticeType = 2; //公告的类型
    optional string noticeTitle = 3; //公告的标题
    optional string noticeContent = 4; //公告的内容
    optional string noticeMemo = 5; //公告的备注
    repeated string fileds = 6; //   公告内容
}

//用户的seesion 主要是游戏的
message GameSession {
    optional uint32 UserId = 1; //玩家Id
    optional int32 RoomId = 2; //roomId
    optional int32 DeskId = 3; //DeskId
    optional int32 GameStatus = 4; //游戏的状态，
    optional int32 GameId = 5; //游戏的状态，
    optional int32 GameNumber = 6; //游戏编号
    optional int32 GameCustomStatus = 7; //自定义状态，麻将自己的，斗地主自己的，炸金花自己的
    optional bool isBreak = 8; //断线
    optional bool isLeave = 9; //离开
}

// 微信信息
message WeixinInfo {
    optional string openId = 1; // 微信授权用户唯一id
    optional string nickName = 2; // 微信昵称
    optional string headUrl = 3; // 微信头像
    optional int32 sex = 4; // 性别: 1=男  2=女
    optional string city = 5; // 城市
    optional string unionId = 6; // unionId
}

//登录的结构
message game_Login {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 用户id
    optional int32 protoVersion = 3; // 客户端 proto version
    optional WeixinInfo wxInfo = 4; //微信登录信息
}